bug 320008: Double-quotes in attributes in constructs parsed by the XML constructor get double-escaped, turning into &amp;quot; r=brendan